Bug 1746059 - Fix broken ImageBitmapRenderingContext::TransferFromImageBitmap for OffscreenCanvas. r=lsalzman,emilio

This patch ensures that when we call TransferFromImageBitmap, it
actually gets the correct result and resets the context to all black,
instead of just crashing. We now also clear the ImageContainer properly
instead of adding a null image if none is provided.

Differential Revision: https://phabricator.services.mozilla.com/D133806